alterações realizadas e pendencias